[package]
name = "crub-graper"
version = "0.1.0"
edition = "2024"
description = "CMAKE ON RUST. WHY? I DONT FCKING KNOW"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3" 

petgraph = "0.6"

regex = "1.10"
walkdir = "2.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
toml = "0.8"

clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

sha2 = "0.10"
hex = "0.4"

indicatif = "0.17"